--- a/caservice/index.html
+++ b/caservice/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <div id="wrapper">
+  <div id="wrappertop">
   <div id="toplogo">
     <h1><img src="img/white_logo.png" alt="logo"></h1>
   </div>
@@ -45,6 +46,7 @@
       $('#icon').find('img').attr('src',srcValue);
     }
   </script>
+  </div>
 
   <div id="serviceinfo">
 
@@ -153,6 +155,7 @@
     <div class="uline"><img src="img/line.png" alt="bline"></div>
   </div>
 
+<div id="release">
   <div id="newrelease">
     <img src="img/new_release.png" alt="newrelease">
   </div>
@@ -163,6 +166,7 @@
       <h3>ギャンブルRPG</h3>
       <h4>カテゴリ：ゲーム</h4>
       <p>あなたの運で世界を救え！ルーレットで戦う新感覚ゲーム「ギャンブルRPG」</p>
+
       <div class="plati"><img src="img/plat.png" alt="plat">
       </div>
     </div>
@@ -173,6 +177,7 @@
       乙女部へようこそ～</h3>
       <h4>カテゴリ：ゲーム</h4>
       <p>ついに…”オネェ”に恋する乙女ゲームが登場！</p>
+
       <div class="plati"><img src="img/plat.png" alt="plat">
       </div>
     </div>
@@ -182,6 +187,7 @@
       <h3>AWA</h3>
       <h4>カテゴリ：音楽</h4>
       <p>国内最大級の楽曲数を誇る定額制音楽配信サービス。</p>
+
       <div class="plati"><img src="img/plat.png" alt="plat">
       </div>
     </div>
@@ -191,11 +197,12 @@
       <h3>もやししゃちょー</h3>
       <h4>カテゴリ：ゲーム</h4>
       <p>あの大人気Youtuber「はじめしゃちょー」がゲームアプリ化！</p>
+
       <div class="plati"><img src="img/plat.png" alt="plat">
       </div>
     </div>
   </div>
-
+</div>
   <footer>
   <div id="footerimg">
     <img src="img/footer_banner.png" alt="footerbanner_01" >
