--- a/caservice/index.html
+++ b/caservice/index.html
@@ -166,7 +166,7 @@
       <h3>ギャンブルRPG</h3>
       <h4>カテゴリ：ゲーム</h4>
       <p>あなたの運で世界を救え！ルーレットで戦う新感覚ゲーム「ギャンブルRPG」</p>
-
+      <!-- <p>サービス詳細へ</p> -->
       <div class="plati"><img src="img/plat.png" alt="plat">
       </div>
     </div>
